fixed spacing issue on Galaxy S8+ in landscape mode

--- a/style.css
+++ b/style.css
@@ -706,11 +706,26 @@ button:active,
     }
 
     .introduction-contents .landscape-content-container {
-        width: 55%;
+        justify-content: space-between;
+        width: 40%;
+    }
+
+    .introduction-contents .landscape-content-container span,
+    .introduction-contents .landscape-content-container h2,
+    .introduction-contents .landscape-content-container .tagline-container {
+        width: 100%;
+    }
+
+    .introduction-contents .landscape-content-container .tagline-container {
+        height: 15%;
     }
 
     .introduction-contents img {
-        height: 50%;
+        height: 55%;
+    }
+
+    .information-about-me .information-about-me-contents .icons-container {
+        width: 30%;
     }
 
     .information-about-me {
@@ -737,6 +752,19 @@ button:active,
         height: 50rem;
         top: 0rem;
         padding-top: 5rem;
+    }
+}
+
+@media only screen 
+    and (min-device-width: 740px)
+    and (max-device-width: 740px)
+    and (min-device-height: 360px)
+    and (max-device-height: 360px)
+    and (orientation: landscape) {
+    
+    .introduction-contents .landscape-content-container h2 p:nth-child(2) {
+        position: relative;
+        right: 7%;
     }
 }
 
@@ -774,8 +802,12 @@ button:active,
             bottom: 11%
         }
 
+        .introduction .introduction-contents {
+            justify-content: center;
+        }
+
         .introduction .introduction-contents h2 {
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
             justify-content: flex-start;
         }
 
